# collidoscope

./: README.md
CollidoscopeApp/include/: AudioEngine.h  BufferToWaveRecorderNode.h  Chunk.h  Config.h  DrawInfo.h  EnvASR.h  Log.h  MIDI.h  Messages.h  Oscilloscope.h  PGranular.h  PGranularNode.h  ParticleController.h  Resources.h  RingBufferPack.h  Wave.h
CollidoscopeApp/linux/: CMakeLists.txt
CollidoscopeApp/src/: AudioEngine.cpp  BufferToWaveRecorderNode.cpp  Chunk.cpp  CollidoscopeApp.cpp  Config.cpp  Log.cpp  MIDI.cpp  PGranularNode.cpp  ParticleController.cpp  Wave.cpp
CollidoscopeTeensy/: CollidoscopeTeensy_new.ino  CollidoscopeTeensy_original.ino
JackDevice/: ContextJack.cpp  ContextJack.h  DeviceManagerJack.cpp  DeviceManagerJack.h
pcb/: CreativeCommons_license.txt  Readme.txt  collidoscope_pcb.brd  collidoscope_pcb.sch  collidoscope_pcb_housing.ai
pcb/Gerbers/: collidoscope_pcb.GBL  collidoscope_pcb.GBS  collidoscope_pcb.GTL  collidoscope_pcb.GTO  collidoscope_pcb.TXT
